--- a/Sun Tours-Website/assortimenten/frankrijk.html
+++ b/Sun Tours-Website/assortimenten/frankrijk.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="..//Sun Tours-Website/css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -25,20 +25,25 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="../Sun Tours-Website/assortiment.html">Assortiment</a>
+          <a class="nav-link" href="../assortiment.html">Assortiment</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../Sun Tours-Website/contact.html">Contact</a>
+          <a class="nav-link" href="../contact.html">Contact</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="../Sun Tours-Website/php/aanmelden.php">Aanmelden</a>
+          <a class="nav-link" href="../aanmelden.html">Aanmelden</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../Sun Tours-Website/FAQ.html">FAQ</a>
+          <a class="nav-link" href="../FAQ.html">FAQ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../Sun Tours-Website/Review.html">Review</a>
+          <a class="nav-link" href="../Review.html">Review</a>
+        </li>
+        <li class="nav-item" id='logout_li'>
+          <form method="POST" id="logoutForm"  >
+            <input type="submit" id="logout" name="logout" value="Logout" class="btn btn-sm btn-outline-secondary">
+          </form>
         </li>
       </ul>
     </div>
@@ -46,46 +51,33 @@
 
   <main>
     <section class="jumbotron text-center">
-        <div class="container">
-            <h1 class="jumbotron-heading">Hotel Pine Bay Holiday Resort –Turkije</h1>
-            <p class="lead text-muted">Egeïsche Kust, Kusadasi</p>
-        </div>
+      <div class="container">
+        <h1 class="jumbotron-heading">Disneyland parijs</h1>
+        <p class="lead text-muted">Bij Sun Tours bieden wij de leukste en gezelligste vakanties aan.</p>
+      </div>
     </section>
 
     <div class="container">
       <div class="row">
         <div class="col">
-            <div class="assortiment-first-image img_3-1">
+          <div class="assortiment-first-image img_5-1">
 
-            </div>
+          </div>
 
         </div>
 
         <div class="col">
           <div class="assortiment-first-text">
 
-            <b>Reispakketten All inclusive(8 dagen)Hotel Pine Bay Holiday Resort –Turkije </b><br>Bent u op zoek naar een
-        zorgelozevakantie Turkije? Hotel Pine Bay Holiday Resort biedt tal van faciliteiten voor een onbezorgde
-        vakantie. Dit ruim opgezette resort ligt midden in schitterende tuinen en direct aan een prachtige baai. Het
-        resort heeft een aantalrenovaties ondergaan en mag zichzelf het coolste hotel van Kusadasi noemen<br><br>
-
-        <b>Ligging: Pine Bay Holiday Resort</b>
-        <br>
-
-
-        Gelegen op een heuvel<br>
-        Direct aan het strand<br>
-        Op ca. 5 kilometer van Kusadasi<br>
-        Op ca. 11 kilometer van het antieke Efese<br>
-        Bushalte voor het resort<br>
-        Winkels, restaurants en bars op ca. 5 kilometer<br>
-        <br>
-        <b>Restaurants & bars</b>
-        <br>
-
-        1 buffetrestaurant<br>
-        5 à-la-carterestaurants (vooraf reserveren)<br>
-        6 bars<br>
+            <b>Reispakketten All inclusive(8 dagen) </b>Dankzij Villages Nature® Paris by Center Parcs ben je er even helemaal tussenuit en keer je terug naar de essentie. Met je gezin, vrienden of je partner, in deze unieke, groene dorpsoase leef je op het ritme van de natuur in een appartement langs het meer of diep in het bos. Verken onze vijf unieke beleefwerelden in dit groene dorp, waar een creatieve leefstijl harmonieus samenspeelt met de natuur. Een resort boordevol onvergetelijke belevingen met een Adembenemend, natuurlijk verwarmd waterpark Aqualagon. En op sommige dagen kun je zelfs van extra tijd en magie in hetDisneyland® Park én het Walt DisneyStudios® Park genieten (Extra Magic Time). 
+            <br><b>Ligging</b>
+            <br>
+            
+            Centrum op ca. 323 m<br>
+            Luchthaven op ca. 12 km<br>
+            Winkels op ca. 100 m<br>
+            Strant op ca. 12 km<br>
+            
 
 
 
@@ -98,31 +90,30 @@
         <div class="col">
           <div class="assortiment-second-text">
 
-            <b>Zwembaden & Strand</b>
-        <br>
-
-
-        2 buitenbaden: waarvan één verwarmd tijdens de wintermaanden en een Kinderbad buiten. Badhanddoeken (borg
-        vereist), ligbedden,parasols enZonneterras
-
-        <br>
-        <br>
-        <b>Ligging</b>
-        <br>
-
-
-        2 buitenzwembaden <br>
-        1 buitenzwembad met glijbanen (15 mei t/m ca. 31 oktober en op vaste tijden geopend) <br>
-        1 binnenzwembad <br>
-        Zonneterras <br>
-        Privéstrand <br>
-        Ligbedden, matrasjes en parasols gratis (zwembad en strand) <br>
-        Gratis badhanddoekenservice <br>
+            <b>Faciliteiten</b><br>
+  
+            5 sterren<br>
+            243 kamers<br>
+            4 gebouwen met max. 3 verdiepingen<br>
+            Geen liften aanwezig<br>
+            24-uursreceptie<br>
+            Bagageruimte<br>
+            Lobby<br>
+            Tuin<br>
+            Wifi in de openbare ruimte (beperkte snelheid)<br>
+            Wifi (hoge snelheid)*<br>
+            Winkeltjes*<br>
+            Minimarkt*<br>
+            Wasservice*<br>
+            Doktersservice*<br>
+            Kapsalon*<br>
+            Discotheek* (in het Jaz Oasis Hotel)<br>
+            Privéparkeergelegenheid<br>
 
 
           </div>
           <div class="col">
-            <div class="assortiment-first-image img_3-2">
+            <div class="assortiment-first-image img_5-2">
 
             </div>
 
@@ -130,7 +121,7 @@
         </div>
       </div>
     </div>
-
+  </main>
 </body>
 
 <!-- footer is ook onderverdeeld in een top footer en voor de copyright een bottom footer -->
