--- a/Sun Tours-Website/registreren.html
+++ b/Sun Tours-Website/registreren.html
@@ -30,13 +30,18 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="../Sun Tours-Website/php/aanmelden.php">Aanmelden</a>
+        <a class="nav-link" href="aanmelden.html">Aanmelden</a>
       </li> 
       <li class="nav-item">
         <a class="nav-link" href="FAQ.html">FAQ</a>
       </li> 
       <li class="nav-item">
         <a class="nav-link" href="Review.html">Review</a>
+      </li>
+      <li class="nav-item" id='logout_li'>
+        <form method="POST" id="logoutForm"  >
+          <input type="submit" id="logout" name="logout" value="Logout" class="btn btn-sm btn-outline-secondary">
+        </form>
       </li>
     </ul>
   </div>  
