--- a/Sun Tours-Website/aanmelden.html
+++ b/Sun Tours-Website/aanmelden.html
@@ -6,40 +6,45 @@
   <title>Sun Tours</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="text/javascript" src="../Javascript/aameld_box_size.js"></script>
+  <script type="text/javascript" src="Javascript/aameld_box_size.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/styles.css">
-  <script src="../node_modules/jquery/dist/jquery.js"></script>
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
-  <script src="../Javascript/registreer.js"></script>
-  <link rel="stylesheet" href="../css/bootstrap.css">
+  <script src="Javascript/ajax.js"></script>
+  <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
 <body class="registreer_body">
 
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <a href="../index.html"><img class="img-fluid" src="../images/SunLogo.png" alt="x" style="width: 60px;"></a>
+    <a href="index.html"><img class="img-fluid" src="images/SunLogo.png" alt="x" style="width: 60px;"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="../assortiment.html">Assortiment</a>
+          <a class="nav-link" href="assortiment.html">Assortiment</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../contact.html">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="./aanmelden.php">Aanmelden</a>
+          <a class="nav-link" href="aanmelden.html">Aanmelden</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../FAQ.html">FAQ</a>
+          <a class="nav-link" href="FAQ.html">FAQ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../Review.html">Review</a>
+          <a class="nav-link" href="Review.html">Review</a>
+        </li>
+        <li class="nav-item" id='logout_li'>
+          <form method="POST" id="logoutForm"  >
+            <input type="submit" id="logout" name="logout" value="Logout" class="btn btn-sm btn-outline-secondary">
+          </form>
         </li>
       </ul>
     </div>
@@ -136,10 +141,10 @@
       </div>
       <div class="col-3 mx-3 mt-3">
         <div class="row mx-1">
-          <a href=""><img class="img-fluid" src="../images/facebook.png" alt="x" style="width: 60px;"></a>
-          <a href=""><img class="img-fluid" src="../images/twitter.png" alt="x" style="width: 60px;"></a>
+          <a href=""><img class="img-fluid" src="images/facebook.png" alt="x" style="width: 60px;"></a>
+          <a href=""><img class="img-fluid" src="images/twitter.png" alt="x" style="width: 60px;"></a>
           <div class="mt-1 mx-1">
-            <a href=""><img class="img-fluid" src="../images/youtube.png" alt="x" style="width: 53px;"></a>
+            <a href=""><img class="img-fluid" src="images/youtube.png" alt="x" style="width: 53px;"></a>
           </div>
         </div>
       </div>
