--- a/Sun Tours-Website/assortimenten/egypte.html
+++ b/Sun Tours-Website/assortimenten/egypte.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="..//Sun Tours-Website/css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -25,20 +25,25 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="../Sun Tours-Website/assortiment.html">Assortiment</a>
+          <a class="nav-link" href="../assortiment.html">Assortiment</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../Sun Tours-Website/contact.html">Contact</a>
+          <a class="nav-link" href="../contact.html">Contact</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="../Sun Tours-Website/php/aanmelden.php">Aanmelden</a>
+          <a class="nav-link" href="../aanmelden.html">Aanmelden</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../Sun Tours-Website/FAQ.html">FAQ</a>
+          <a class="nav-link" href="../FAQ.html">FAQ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../Sun Tours-Website/Review.html">Review</a>
+          <a class="nav-link" href="../Review.html">Review</a>
+        </li>
+        <li class="nav-item" id='logout_li'>
+          <form method="POST" id="logoutForm"  >
+            <input type="submit" id="logout" name="logout" value="Logout" class="btn btn-sm btn-outline-secondary">
+          </form>
         </li>
       </ul>
     </div>
