--- a/Sun Tours-Website/index.html
+++ b/Sun Tours-Website/index.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+  <script src="Javascript/ajax.js"></script>
+
  
 </head>
 <body>          
@@ -29,13 +33,18 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="php/aanmelden.php">Aanmelden</a>
+        <a class="nav-link" href="aanmelden.html">Aanmelden</a>
       </li> 
       <li class="nav-item">
         <a class="nav-link" href="FAQ.html">FAQ</a>
       </li> 
       <li class="nav-item">
         <a class="nav-link" href="Review.html">Review</a>
+      </li>
+      <li class="nav-item" id='logout_li'>
+        <form method="POST" id="logoutForm"  >
+          <input type="submit" id="logout" name="logout" value="Logout" class="btn btn-sm btn-outline-secondary">
+        </form>
       </li>
     </ul>
   </div>  
@@ -129,7 +138,7 @@
       
 
         <div class="col-md-4 text-center">
-          <a href="php/aanmelden.php"><img class="img-fluid p-5 indexPics" src="images/guests-book.png" alt="x"></a>
+          <a href="aanmelden.html"><img class="img-fluid p-5 indexPics" src="images/guests-book.png" alt="x"></a>
           <h5>
             aanmelden
           </h5>
