--- a/Sun Tours-Website/aanmelden.html
+++ b/Sun Tours-Website/aanmelden.html
@@ -6,7 +6,6 @@
   <title>Sun Tours</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="text/javascript" src="Javascript/aameld_box_size.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <script src="node_modules/jquery/dist/jquery.js"></script>
@@ -39,7 +38,7 @@
           <a class="nav-link" href="FAQ.html">FAQ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Review.html">Review</a>
+          <a class="nav-link" href="../Sun Tours-Website/php/Review.php">Review</a>
         </li>
         <li class="nav-item" id='logout_li'>
           <form method="POST" id="logoutForm"  >
