--- a/Sun Tours-Website/assortiment.html
+++ b/Sun Tours-Website/assortiment.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Sun Tours</title>
+    <title>Sun Tours</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+  <script src="Javascript/ajax.js"></script>
+  <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>          
 
@@ -35,7 +37,7 @@
         <a class="nav-link" href="FAQ.html">FAQ</a>
       </li> 
       <li class="nav-item">
-        <a class="nav-link" href="Review.html">Review</a>
+        <a class="nav-link" href="../Sun Tours-Website/php/Review.php">Review</a>
       </li>
       <li class="nav-item" id='logout_li'>
         <form method="POST" id="logoutForm"  >
