--- a/Sun Tours-Website/index.html
+++ b/Sun Tours-Website/index.html
@@ -106,7 +106,7 @@
         <!-- einde col 1 -->
 
         <div class="col-md-4 text-center">
-          <a href="Review.html"><img class="img-fluid p-5 indexPics" src="images/revieuw.jpg" alt="x"></a>
+          <a href="../Sun Tours-Website/php/Review.php"><img class="img-fluid p-5 indexPics" src="images/revieuw.jpg" alt="x"></a>
           <h5>
             Review
           </h5>
