assortimenten links gefixed

--- a/Sun Tours-Website/assortiment.html
+++ b/Sun Tours-Website/assortiment.html
@@ -73,7 +73,7 @@
                   <p class="card-text"><b>Hotel Best Tenerife-Spanje</b> Tenerife, Playa De Las AmericasBoek snel jouw vakantie Tenerife!</p><small class="text-muted">€600,-p/p</small><br><br>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="../assortimenten/spanje.html">Bekijk aanbod</a></button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="assortimenten/spanje.html">Bekijk aanbod</a></button>
                     </div>
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="./boekingen.html?keuze=Spanje" style="color:firebrick;">Boek vakantie</a></button>
@@ -90,7 +90,7 @@
                   <p class="card-text"><b>Hotel Gold City -Turkije</b>Turkse Rivièra, AlanyaHotel Gold City is alleen al uniek vanwege de prachtige ligging. </p></p><small class="text-muted">€800,-p/p</small><br><br>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="../assortimenten/turkije.html">Bekijk aanbod</a></button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="assortimenten/turkije.html">Bekijk aanbod</a></button>
                     </div>
                       <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="./boekingen.html?keuze=Turkije1" style="color:firebrick;">Boek vakantie</a></button>
@@ -106,7 +106,7 @@
                   <p class="card-text"><b>Hotel Pine Bay Holiday Resort –Turkije</b>Egeïsche Kust, KusadasiBent u op zoek naar een zorgelozevakantie Turkije? </p></p><small class="text-muted">€500,-p/p</small><br><br>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="../assortimenten/turkije2.html">Bekijk aanbod</a></button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="assortimenten/turkije2.html">Bekijk aanbod</a></button>
                     </div>
                       <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="./boekingen.html?keuze=Turkije2" style="color:firebrick;">Boek vakantie</a></button>
@@ -126,7 +126,7 @@
                   <p class="card-text"><b>Hotel Hilton Marsa Resort</b> -EgypteRode Zeekust, Marsa AlamKies voor eenvakantie naar Egypte.</p><small class="text-muted">€450,-p/p</small><br><br>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="../assortimenten/egypte.html">Bekijk aanbod</a></button></p>
+                      <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="assortimenten/egypte.html">Bekijk aanbod</a></button></p>
                     </div>
                       <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="./boekingen.html?keuze=Egypte" style="color:firebrick;">Boek vakantie</a></button>
@@ -143,7 +143,7 @@
                   <p class="card-text"><b>Disneyland Parijs Frankrijk</b> Paris by Center ParcsDankzij Villages Nature<br><Br></p></p><small class="text-muted">€950,-p/p</small><br><br>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="../assortimenten/frankrijk.html">Bekijk aanbod</a></button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="assortimenten/frankrijk.html">Bekijk aanbod</a></button>
                     </div>
                       <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-outline-secondary"><a class="nav-link" href="./boekingen.html?keuze=Frankrijk" style="color:firebrick;">Boek vakantie</a></button>
