--- a/Sun Tours-Website/index.html
+++ b/Sun Tours-Website/index.html
@@ -39,7 +39,7 @@
         <a class="nav-link" href="FAQ.html">FAQ</a>
       </li> 
       <li class="nav-item">
-        <a class="nav-link" href="Review.html">Review</a>
+        <a class="nav-link" href="../Sun Tours-Website/php/Review.php">Review</a>
       </li>
       <li class="nav-item" id='logout_li'>
         <form method="POST" id="logoutForm"  >
