--- a/Sun Tours-Website/temp.html
+++ b/Sun Tours-Website/temp.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="../FAQ.html">FAQ</a>
         </li> 
         <li class="nav-item">
-                    <a class="nav-link" href="../Review.html">Review</a>
+                    <a class="nav-link" href="../Sun Tours-Website/php/Review.php">Review</a>
                 </li>
       </ul>
     </div>  
