log uit knop werkend
log uit knop werkend

--- a/Sun Tours-Website/assortimenten/turkije2.html
+++ b/Sun Tours-Website/assortimenten/turkije2.html
@@ -17,7 +17,7 @@
 
 
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <a href="../Sun Tours-Website/index.html"><img class="img-fluid" src="../Sun Tours-Website/images/SunLogo.png"
+    <a href="../index.html"><img class="img-fluid" src="../images/SunLogo.png"
         alt="x" style="width: 60px;"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -151,12 +151,12 @@
       </div>
       <div class="col-3 mx-3 mt-3">
         <div class="row mx-1">
-          <a href=""><img class="img-fluid" src="../Sun Tours-Website/images/facebook.png" alt="x"
+          <a href=""><img class="img-fluid" src="../images/facebook.png" alt="x"
               style="width: 60px;"></a>
-          <a href=""><img class="img-fluid" src="../Sun Tours-Website/images/twitter.png" alt="x"
+          <a href=""><img class="img-fluid" src="../images/twitter.png" alt="x"
               style="width: 60px;"></a>
           <div class="mt-1 mx-1">
-            <a href=""><img class="img-fluid" src="../Sun Tours-Website/images/youtube.png" alt="x"
+            <a href=""><img class="img-fluid" src="../images/youtube.png" alt="x"
                 style="width: 53px;"></a>
           </div>
         </div>
