--- a/Sun Tours-Website/assortimenten/frankrijk.html
+++ b/Sun Tours-Website/assortimenten/frankrijk.html
@@ -54,6 +54,7 @@
       <div class="container">
         <h1 class="jumbotron-heading">Disneyland parijs</h1>
         <p class="lead text-muted">Bij Sun Tours bieden wij de leukste en gezelligste vakanties aan.</p>
+        <button class="Boekingen_Button"><a class="nav-link" href="../boekingen.html?keuze=Frankrijk">Boek Nu</a></button>
       </div>
     </section>
 
