--- a/Sun Tours-Website/assortimenten/turkije2.html
+++ b/Sun Tours-Website/assortimenten/turkije2.html
@@ -54,6 +54,7 @@
         <div class="container">
             <h1 class="jumbotron-heading">Hotel Pine Bay Holiday Resort –Turkije</h1>
             <p class="lead text-muted">Egeïsche Kust, Kusadasi</p>
+            <button class="Boekingen_Button"><a class="nav-link" href="../boekingen.html?keuze=Turkije2">Boek Nu</a></button>
         </div>
     </section>
 
