--- a/Sun Tours-Website/boekingen.html
+++ b/Sun Tours-Website/boekingen.html
@@ -135,8 +135,12 @@
           <input type="number" min="0" onchange="update_prices()" id="aantal_Dagen" name="aantal_Dagen"><Br><Br>
             <label>geldig vanaf:</label><br>
             <input id="bus-dates" type='date'></input><br><br>
+            
 
         </div>
+        <input type="text" id="packageID" name="packageID" hidden>
+        <input type="text" id="totalPrice" name="totalPrice" hidden>
+
         <table id='boekingenTable'>
           <tr>
             <th><label>Auto Prijs:</label></th>
