--- a/Sun Tours-Website/index.html
+++ b/Sun Tours-Website/index.html
@@ -46,11 +46,14 @@
           <input type="submit" id="logout" name="logout" value="Logout" class="btn btn-sm btn-outline-secondary">
         </form>
       </li>
+      
     </ul>
   </div>  
 </nav>
 
 <main>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <section class="top-block-section">
     <div class="container">
       <div class="row align-items-center">
