--- a/Sun Tours-Website/index.html
+++ b/Sun Tours-Website/index.html
@@ -12,10 +12,15 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
   <script src="Javascript/ajax.js"></script>
-
- 
+  <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+  <script>
+    Weglot.initialize({
+        api_key: 'wg_e0862d6fccddf79b84908b2ed4ee35a62'
+    });
+</script>
 </head>
 <body>          
+
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <a href="index.html"><img class="img-fluid" src="images/SunLogo.png" alt="x"
         style="width: 60px;"></a>
