--- a/Sun Tours-Website/boekingen.html
+++ b/Sun Tours-Website/boekingen.html
@@ -130,6 +130,8 @@
           <input type="radio" id="hide_bus_deals2" name="busverhuur" onchange="hide_bus_deals()">nee<Br><Br>
         </div>
 
+        <input type="text" id="packageID" name="packageID" hidden>
+
         <div id="bus">
           <label>Aantal dagen openbaar vervoer:</label><br>
           <input type="number" min="0" onchange="update_prices()" id="aantal_Dagen" name="aantal_Dagen"><Br><Br>
