--- a/Sun Tours-Website/aanmelden.html
+++ b/Sun Tours-Website/aanmelden.html
@@ -71,7 +71,7 @@
                   </div>
                 </div>
               </div>
-              <div class="foot"> <a href="#">Wachtwoord vergeten?</a> </div>
+              <div class="foot"> <a href="passwordChange.html">Wachtwoord vergeten?</a> </div>
               <div class="mt-2 mb-3"> <button class="btn btn-primary full-width sendKnop button" value="Log In" id="loginKnop" type="submit">Login</button> </div>
             </form>
 
