--- a/Sun Tours-Website/passwordChange.html
+++ b/Sun Tours-Website/passwordChange.html
@@ -60,7 +60,7 @@
         <form method="POST" id="pswrdSendCode">
             <label>Uw e-mail:</label><br>
             <input type="text" class="contactInput" id="codeEmail" name="codeEmail" placeholder="E-mail"><br><br>
-            <input type="submit" class="buttonContact" value="Verstuur code" class="sendKnop">
+            <input type="submit" class="buttonContact" id="sendCodeButton" value="Verstuur code" class="sendKnop">
         </form>
 
       <form method="POST" id="changePswrd">
@@ -68,9 +68,9 @@
         <label>Uw code:</label><br>
         <input type="text" class="contactInput" id="secCode" name="secCode" placeholder="Code"><br><br>
         <label>Uw Nieuwe wachtwoord:</label><br>
-        <input type="text" class="contactInput" id="newPswrd" name="newPswrd" placeholder="wachtwoord"><br><br>
+        <input type="password" class="contactInput" id="newPswrd" name="newPswrd" placeholder="Wachtwoord"><br><br>
         <label>Bevestig wachtwoord:</label><br>
-        <input type="text" class="contactInput" id="confPaswrd" name="confPaswrd" placeholder="Bevestig wachtwoord:"><br><br>
+        <input type="password" class="contactInput" id="confPaswrd" name="confPaswrd" placeholder="Bevestig wachtwoord:"><br><br>
         <label>Uw e-mail:</label><br>
         <input type="text" class="contactInput" id="pswrdEmail" name="pswrdEmail" placeholder="E-mail"><br><br>
 
