ajaxhandler.php opgeschoond
isset checks verkort tot alleen de submit die ingedrukt is

--- a/Sun Tours-Website/activatie.html
+++ b/Sun Tours-Website/activatie.html
@@ -62,7 +62,7 @@
         <label>Uw e-mail:</label><br>
         <input type="text" class="contactInput" id="email" name="email" placeholder="E-mail"><br><br>
 
-        <input type="submit" class="buttonContact" value="Activeer" id="verifyButton" class="sendKnop">
+        <input type="submit" class="buttonContact" value="Activeer" name="verifyButtonAct" id="verifyButton" class="sendKnop">
       </form>
 
     </div>
