--- a/Sun Tours-Website/contact.html
+++ b/Sun Tours-Website/contact.html
@@ -40,7 +40,7 @@
           <a class="nav-link" href="FAQ.html">FAQ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../Sun Tours-Website/php/Review.php">Review</a>
+          <a class="nav-link" href="/php/Review.php">Review</a>
         </li>
         <li class="nav-item" id='logout_li'>
           <form method="POST" id="logoutForm"  >
@@ -76,7 +76,7 @@
         <input type="text" class="contactInput" id="contact_onderwerp" name="contact_onderwerp"
           placeholder="Onderwerp"><br><br>
         <textarea id="contact_text" class="contactArea" name="contact_text" rows="4" cols="50"></textarea><br><br>
-        <input type="submit" class="buttonContact" value="Verzend" id="contact_button" class="sendKnop">
+        <input type="submit" class="buttonContact" value="Verzend" name="sendContact"id="contact_button" class="sendKnop">
       </form>
 
       <div class="info">
