--- a/Sun Tours-Website/passwordChange.html
+++ b/Sun Tours-Website/passwordChange.html
@@ -60,7 +60,7 @@
         <form method="POST" id="pswrdSendCode">
             <label>Uw e-mail:</label><br>
             <input type="text" class="contactInput" id="codeEmail" name="codeEmail" placeholder="E-mail"><br><br>
-            <input type="submit" class="buttonContact" id="sendCodeButton" value="Verstuur code" class="sendKnop">
+            <input type="submit" class="buttonContact" name="sendCodeButton" id="sendCodeButton" value="Verstuur code" class="sendKnop">
         </form>
 
       <form method="POST" id="changePswrd">
@@ -74,7 +74,7 @@
         <label>Uw e-mail:</label><br>
         <input type="text" class="contactInput" id="pswrdEmail" name="pswrdEmail" placeholder="E-mail"><br><br>
 
-        <input type="submit" class="buttonContact" value="Verander" id="verifyButton" class="sendKnop">
+        <input type="submit" class="buttonContact" value="Verander" name="verifyButton" id="verifyButton" class="sendKnop">
       </form>
 
     </div>
