--- a/Sun Tours-Website/aanmelden.html
+++ b/Sun Tours-Website/aanmelden.html
@@ -72,7 +72,7 @@
                 </div>
               </div>
               <div class="foot"> <a href="passwordChange.html">Wachtwoord vergeten?</a> </div>
-              <div class="mt-2 mb-3"> <button class="btn btn-primary full-width sendKnop button" value="Log In" id="loginKnop" type="submit">Login</button> </div>
+              <div class="mt-2 mb-3"> <button class="btn btn-primary full-width sendKnop button" value="Log In" name="sendLogin" id="loginKnop" type="submit">Login</button> </div>
             </form>
 
           </div>
@@ -109,7 +109,7 @@
               <hr class="mt-3 mb-4">
               <div class="col-12">
                 <div class="d-flex flex-wrap justify-content-between align-items-center">
-                  <div class="custom-checkbox d-block"> </div> <button class="btn btn-primary mt-3 mt-sm-0 sendKnop button" value="Registreer" id="registratieknop" type="submit">Registreer</button>
+                  <div class="custom-checkbox d-block"> </div> <button class="btn btn-primary mt-3 mt-sm-0 sendKnop button" value="Registreer" name="sendReg" id="registratieknop" type="submit">Registreer</button>
                 </div>
               </div>
               <br>
