--- a/Sun Tours-Website/boekingen.html
+++ b/Sun Tours-Website/boekingen.html
@@ -166,7 +166,7 @@
 
         </table>
 
-        <input type="submit" value="Volgende" id="contact_button" class="sendKnop">
+        <input type="submit" value="Volgende" name="sendBoeking" id="contact_button" class="sendKnop">
       </form>
       <div class="Cards">
         <div id="selected">
